--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
 
 <body>
 
+    <main class="relative flexbox-container bg-black">
+        <div class="call-to-action">
+
+        </div>
+        <nav class="sidenav">
+
+        </nav>
+
+        <section class="main-section">
+
+        </section>
+    </main>
+
+    <footer id="controls" class="bg-darkgray"></footer>
+
 </body>
 
 </html>
