Finished call to action, only desktop lg

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 
     <main class="relative flexbox-container bg-black">
-        <div class="call-to-action">
-
+        <div class="call-to-action flexbox-container">
+            <a href="#" class="call-btn">Effettua l'upgrade</a>
         </div>
         <nav class="sidenav">
 
