fix call to action problems

--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 
 <body>
 
-    <main class="relative flexbox-container bg-black">
-        <div class="call-to-action flexbox-container">
-            <a href="#" class="call-btn">Effettua l'upgrade</a>
-        </div>
-        <nav class="sidenav">
-
+    <main class="flexbox-container bg-black">
+        <nav class="sidenav bg-black">
+            <div class="navigation">
+                <img src="img/logo.svg" alt="Spotify logo">
+            </div>
         </nav>
 
-        <section class="main-section">
-
+        <section class="main-section relative bg-darkblue">
+            <div class="call-to-action flexbox-container">
+                <a href="#" class="call-btn">Effettua l'upgrade</a>
+            </div>
         </section>
     </main>
 
