SIdenav completed, desktop lg only

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
     </main>
 
-    <footer id="controls" class="bg-darkgray"></footer>
+    <footer id="controls" class="relative bg-darkgray"></footer>
 
 </body>
 
