--- a/index.html
+++ b/index.html
@@ -73,6 +73,79 @@
             <div class="call-to-action flexbox-container">
                 <a href="#" class="call-btn text-white">Effettua l'upgrade</a>
             </div>
+            <div class="categories">
+                <ul class="flexbox-container text-gray">
+                    <li><a href="#" class="text-gray">In evidenza</a></li>
+                    <li><a href="#" class="text-gray">podcast</a></li>
+                    <li><a href="#" class="text-gray">classifiche</a></li>
+                    <li><a href="#" class="text-gray">generi e mood</a></li>
+                    <li><a href="#" class="text-gray">nuove uscite</a></li>
+                    <li><a href="3" class="text-gray">scopri</a></li>
+                </ul>
+            </div>
+            <div class="music">
+                <h1 class="title text-white">Recently played</h1>
+                <div class="carousel flexbox-container">
+                    <div class="album flexbox-container">
+                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <h6 class="title text-white">Heavy Metal</h6>
+                        <p class="subtitle text-gray">Subtitle</p>
+                    </div>
+                    <div class="album flexbox-container">
+                        <img src="img/stranger.jpeg" alt="Stranger">
+                        <h6 class="title text-white">Stranger Things. Vol 1</h6>
+                        <p class="subtitle text-gray">Kyle Dixon & Michael Stein</p>
+                    </div>
+                    <div class="album flexbox-container">
+                        <img src="img/aquietplace.jpeg" alt="Metal">
+                        <h6 class="title text-white">A Quiet place</h6>
+                        <p class="subtitle text-gray">Subtitle</p>
+                    </div>
+                    <div class="album flexbox-container">
+                        <img src="img/split.jpeg" alt="Metal">
+                        <h6 class="title text-white">Split</h6>
+                        <p class="subtitle text-gray">Subtitle</p>
+                    </div>
+                    <div class="album flexbox-container">
+                        <img src="img/cure.jpeg" alt="Metal">
+                        <h6 class="title text-white">A cure for wellness</h6>
+                        <p class="subtitle text-gray">Subtitle</p>
+                    </div>
+                    <div class="album flexbox-container">
+                        <img src="img/sinister.jpeg" alt="Metal">
+                        <h6 class="title text-white">Sinister</h6>
+                        <p class="subtitle text-gray">Subtitle</p>
+                    </div>
+                </div>
+            </div>
+            <div class="music">
+                <h1 class="title text-white">Recently played</h1>
+                <h4 class="subtitle text-gray">Più ascolti, più accurati saranno i suggerimenti</h4>
+                <div class="carousel flexbox-container">
+                    <div class="album flexbox-container">
+                        <img src="img/radar.jpeg" alt="Metal">
+                        <h6 class="title text-white">Release Radar</h6>
+                    </div>
+                    <div class="album flexbox-container">
+                        <img src="img/mixdaily.jpeg" alt="Metal">
+                        <h6 class="title text-white">Daily mix 1</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="music" id="artists">
+                <h1 class="title text-white">Artisti più popolari</h1>
+                <h4 class="subtitle text-gray">Più ascolti, più accurati saranno i suggerimenti</h4>
+                <div class="carousel flexbox-container">
+                    <div class="album flexbox-container">
+                        <img src="img/youg.jpeg" alt="Metal">
+                        <h6 class="title text-white">Lana del ray</h6>
+                    </div>
+                    <div class="album flexbox-container">
+                        <img src="img/einaudi.jpeg" alt="Metal">
+                        <h6 class="title text-white">Ludovico Einaudi</h6>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
