--- a/index.html
+++ b/index.html
@@ -87,32 +87,62 @@
                 <h1 class="title text-white">Recently played</h1>
                 <div class="carousel flexbox-container">
                     <div class="album flexbox-container">
-                        <img src="img/metal_lifting.jpg" alt="Metal">
+                        <div class="image relative">
+                            <img src="img/metal_lifting.jpg" alt="Metal">
+                            <div class="hover relative">
+                                <i class="far fa-play-circle text-white"></i>
+                            </div>
+                        </div>
                         <h6 class="title text-white">Heavy Metal</h6>
                         <p class="subtitle text-gray">Subtitle</p>
                     </div>
                     <div class="album flexbox-container">
-                        <img src="img/stranger.jpeg" alt="Stranger">
+                        <div class="image relative">
+                            <img src="img/stranger.jpeg" alt="Stranger">
+                            <div class="hover relative">
+                                <i class="far fa-play-circle text-white"></i>
+                            </div>
+                        </div>
                         <h6 class="title text-white">Stranger Things. Vol 1</h6>
                         <p class="subtitle text-gray">Kyle Dixon & Michael Stein</p>
                     </div>
                     <div class="album flexbox-container">
-                        <img src="img/aquietplace.jpeg" alt="Metal">
+                        <div class="image relative">
+                            <img src="img/aquietplace.jpeg" alt="Metal">
+                            <div class="hover relative">
+                                <i class="far fa-play-circle text-white"></i>
+                            </div>
+                        </div>
                         <h6 class="title text-white">A Quiet place</h6>
                         <p class="subtitle text-gray">Subtitle</p>
                     </div>
                     <div class="album flexbox-container">
-                        <img src="img/split.jpeg" alt="Metal">
+                        <div class="image relative">
+                            <img src="img/split.jpeg" alt="Metal">
+                            <div class="hover relative">
+                                <i class="far fa-play-circle text-white"></i>
+                            </div>
+                        </div>
                         <h6 class="title text-white">Split</h6>
                         <p class="subtitle text-gray">Subtitle</p>
                     </div>
                     <div class="album flexbox-container">
-                        <img src="img/cure.jpeg" alt="Metal">
+                        <div class="image relative">
+                            <img src="img/cure.jpeg" alt="Metal">
+                            <div class="hover relative">
+                                <i class="far fa-play-circle text-white"></i>
+                            </div>
+                        </div>
                         <h6 class="title text-white">A cure for wellness</h6>
                         <p class="subtitle text-gray">Subtitle</p>
                     </div>
                     <div class="album flexbox-container">
-                        <img src="img/sinister.jpeg" alt="Metal">
+                        <div class="image relative">
+                            <img src="img/sinister.jpeg" alt="Metal">
+                            <div class="hover relative">
+                                <i class="far fa-play-circle text-white"></i>
+                            </div>
+                        </div>
                         <h6 class="title text-white">Sinister</h6>
                         <p class="subtitle text-gray">Subtitle</p>
                     </div>
@@ -123,11 +153,21 @@
                 <h4 class="subtitle text-gray">Più ascolti, più accurati saranno i suggerimenti</h4>
                 <div class="carousel flexbox-container">
                     <div class="album flexbox-container">
-                        <img src="img/radar.jpeg" alt="Metal">
+                        <div class="image relative">
+                            <img src="img/radar.jpeg" alt="Metal">
+                            <div class="hover relative">
+                                <i class="far fa-play-circle text-white"></i>
+                            </div>
+                        </div>
                         <h6 class="title text-white">Release Radar</h6>
                     </div>
                     <div class="album flexbox-container">
-                        <img src="img/mixdaily.jpeg" alt="Metal">
+                        <div class="image relative">
+                            <img src="img/mixdaily.jpeg" alt="Metal">
+                            <div class="hover relative">
+                                <i class="far fa-play-circle text-white"></i>
+                            </div>
+                        </div>
                         <h6 class="title text-white">Daily mix 1</h6>
                     </div>
                 </div>
@@ -137,11 +177,21 @@
                 <h4 class="subtitle text-gray">Più ascolti, più accurati saranno i suggerimenti</h4>
                 <div class="carousel flexbox-container">
                     <div class="album flexbox-container">
-                        <img src="img/youg.jpeg" alt="Metal">
+                        <div class="image relative">
+                            <img src="img/youg.jpeg" alt="Metal">
+                            <div class="hover relative">
+                                <i class="far fa-play-circle text-white"></i>
+                            </div>
+                        </div>
                         <h6 class="title text-white">Lana del ray</h6>
                     </div>
                     <div class="album flexbox-container">
-                        <img src="img/einaudi.jpeg" alt="Metal">
+                        <div class="image relative">
+                            <img src="img/einaudi.jpeg" alt="Metal">
+                            <div class="hover relative">
+                                <i class="far fa-play-circle text-white"></i>
+                            </div>
+                        </div>
                         <h6 class="title text-white">Ludovico Einaudi</h6>
                     </div>
                 </div>
