Icon, link hover

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                             Home</a>
                     </li>
                     <li>
-                        <a href="#" class="text-white">
+                        <a href="#" class="text-gray">
                             <img src="img/search.svg" alt="Search">
                             Cerca
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="text-white">
+                        <a href="#" class="text-gray">
                             <img src="img/libreria.svg" alt="Library">
                             La tua libreria
                         </a>
@@ -75,7 +75,10 @@
             </div>
             <div class="categories">
                 <ul class="flexbox-container text-gray">
-                    <li><a href="#" class="text-gray">In evidenza</a></li>
+                    <li class="relative">
+                        <a href="#" class="text-gray">In evidenza</a>
+                        <hr class="active">
+                    </li>
                     <li><a href="#" class="text-gray">podcast</a></li>
                     <li><a href="#" class="text-gray">classifiche</a></li>
                     <li><a href="#" class="text-gray">generi e mood</a></li>
