--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="call-to-action flexbox-container">
                 <a href="#" class="call-btn text-white">Effettua l'upgrade</a>
             </div>
-            <div class="categories">
+            <div class="categories flexbox-container">
                 <ul class="flexbox-container text-gray">
                     <li class="relative">
                         <a href="#" class="text-gray">In evidenza</a>
