Small device responsive done

--- a/index.html
+++ b/index.html
@@ -20,22 +20,23 @@
     <main class="flexbox-container bg-black">
         <nav class="sidenav flexbox-container bg-black">
             <div class="navigation flexbox-container">
-                <img src="img/logo.svg" alt="Spotify logo">
+                <img id="big-logo" src="img/logo.svg" alt="Spotify logo">
+                <img id="small-logo" src="img/logo-small.svg" alt="Spotify logo">
                 <ul>
                     <li class="active">
+                        <img src="img/home.svg" alt="Home">
                         <a href="#" class="text-white">
-                            <img src="img/home.svg" alt="Home">
                             Home</a>
                     </li>
                     <li>
+                        <img src="img/search.svg" alt="Search">
                         <a href="#" class="text-gray">
-                            <img src="img/search.svg" alt="Search">
                             Cerca
                         </a>
                     </li>
                     <li>
+                        <img src="img/libreria.svg" alt="Library">
                         <a href="#" class="text-gray">
-                            <img src="img/libreria.svg" alt="Library">
                             La tua libreria
                         </a>
                     </li>
