--- a/index.html
+++ b/index.html
@@ -205,10 +205,12 @@
 
     <footer id="controls" class="flexbox-container relative bg-darkgray">
         <div id="current-playing" class="flexbox-container">
-            <img src="img/sinister.jpeg" alt="Sinister">
-            <div class="song-info flexbox-container">
-                <h6 class="title text-white">Sinister</h6>
-                <p class="author text-gray">Brano nome</p>
+            <div class="left flexbox-container">
+                <img src="img/sinister.jpeg" alt="Sinister">
+                <div class="song-info flexbox-container">
+                    <h6 class="title text-white">Sinister</h6>
+                    <p class="author text-gray">Brano nome</p>
+                </div>
             </div>
             <div class="buttons text-gray">
                 <i class="far fa-heart"></i>
