Fixing slider footer

--- a/index.html
+++ b/index.html
@@ -231,15 +231,20 @@
                 <div class="line relative">
                     <hr class="lower">
                     <hr class="upper">
+                    <div class="pointer"></div>
                 </div>
                 <span class="text-white">4:35</span>
             </div>
         </div>
-        <div id="control-player" class="text-white">
+        <div id="control-player" class="flexbox-container text-white">
             <i class="fas fa-list"></i>
             <i class="fas fa-desktop"></i>
             <i class="fas fa-volume-up"></i>
-            <input type="range" min="0" max="100" value="20" title="volume">
+            <div class="volume relative">
+                <hr class="lower">
+                <hr class="upper">
+                <div class="pointer"></div>
+            </div>
         </div>
     </footer>
 
