--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="profile">
                     <p class="text-white">
-                        <i class="fas fa-user"></i>
+                        <img src="img/profile.svg" alt="">
                         John Doe
                     </p>
                 </div>
