Fix missing part of responsive (profile sidenav not displaying)

--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
 
             <div class="profile-option">
                 <div class="install">
-                    <p class="text-gray"><i class="fas fa-arrow-circle-down"></i>Installa app</p>
+                    <i class="fas fa-arrow-circle-down text-gray"></i>
+                    <span class="text-gray">Installa app</>
                 </div>
                 <div class="profile">
+                    <img src="img/profile.svg" alt="">
                     <p class="text-white">
-                        <img src="img/profile.svg" alt="">
                         John Doe
                     </p>
                 </div>
